---
source: crates/ruff/src/rules/tryceratops/mod.rs
---
TRY302.py:13:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
13 |         process()
14 |     except Exception:
15 |         raise
   |         ^^^^^ TRY302
16 | 
17 | def bad():
   |

TRY302.py:19:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
19 |         process()
20 |     except Exception:
21 |         raise
   |         ^^^^^ TRY302
22 |         print("this code is pointless!")
   |

TRY302.py:27:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
27 |     except:
28 |         # I am a comment, not a statement!
29 |         raise
   |         ^^^^^ TRY302
30 | 
31 | def bad():
   |

TRY302.py:33:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
33 |         process()
34 |     except Exception:
35 |         raise
   |         ^^^^^ TRY302
36 | 
37 | def bad():
   |

TRY302.py:39:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
39 |         process()
40 |     except Exception as e:
41 |         raise
   |         ^^^^^ TRY302
42 | 
43 | def bad():
   |

TRY302.py:45:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
45 |         process()
46 |     except Exception as e:
47 |         raise e
   |         ^^^^^^^ TRY302
48 | 
49 | def bad():
   |

TRY302.py:51:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
51 |         process()
52 |     except MyException:
53 |         raise
   |         ^^^^^ TRY302
54 |     except Exception:
55 |         raise
   |

TRY302.py:53:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
53 |         raise
54 |     except Exception:
55 |         raise
   |         ^^^^^ TRY302
56 | 
57 | def bad():
   |

TRY302.py:59:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
59 |         process()
60 |     except MyException as e:
61 |         raise e
   |         ^^^^^^^ TRY302
62 |     except Exception as e:
63 |         raise e
   |

TRY302.py:61:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
61 |         raise e
62 |     except Exception as e:
63 |         raise e
   |         ^^^^^^^ TRY302
64 | 
65 | def bad():
   |

TRY302.py:67:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
67 |         process()
68 |     except MyException as ex:
69 |         raise ex
   |         ^^^^^^^^ TRY302
70 |     except Exception as e:
71 |         raise e
   |

TRY302.py:69:9: TRY302 Remove this exception handler as the error is immediately re-raised
   |
69 |         raise ex
70 |     except Exception as e:
71 |         raise e
   |         ^^^^^^^ TRY302
72 | 
73 | def fine():
   |


